// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<ChatList /> > handles invalid date formats gracefully 1`] = `
"Список збережених розмов:

  - bad-date-chat (Некоректна дата)

Примітка: новіші в кінці, старіші на початку"
`;

exports[`<ChatList /> > renders correctly with a list of chats 1`] = `
"Список збережених розмов:

  - chat-1 (2025-10-02 10:00:00)
  - another-chat (2025-10-01 12:30:00)

Примітка: новіші в кінці, старіші на початку"
`;

exports[`<ChatList /> > renders correctly with no chats 1`] = `"Збережених розмов не знайдено."`;
